[package]
name = "mini-payments-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
clap = { version = "4.5.20", features = ["derive"] }
csv = "1.3.0"
indexmap = "2.6.0"
log = "0.4.22"
rust_decimal = { version = "1.36.0", features = ["serde-with-float", "serde-with-arbitrary-precision"] }
rust_decimal_macros = "1.36"
serde = { version = "1.0.213", features = ["derive"] }
thiserror = "1.0.65"
tokio = { version = "1.41.0", features = ["full"] }
